metadata/unpackaged/objects/Mass_Update_Field__c.object
<CustomObject>
    <fields>
        <fullName>Empty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value_CBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Value CBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Value_Date__c</fullName>
        <label>Field Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Value_Datetime__c</fullName>
        <label>Field Value Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Value_Nbr__c</fullName>
        <label>Field Value Nbr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Value_Txt_Area__c</fullName>
        <label>Field Value Txt Area</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <label>Mass Update</label>
        <referenceTo>Mass_Update__c</referenceTo>
        <relationshipLabel>Mass Update Fields</relationshipLabel>
        <relationshipName>R00N70000002HPIREA4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000002HfP4EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mass Update Field</label>
    <nameField>
        <displayFormat>FLD{0000000}</displayFormat>
        <label>Mass Update Fields  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Update Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>